# telegram_project_manager

./: .gitignore  README.md  implementation.md  pyproject.toml
.codex/plans/: c-09c2a71c.md  c-4c033342.md  c-5b4d88c2.md  c-6329dd70.md  c-6eb62ed4.md  c-7f124b6f.md  c-811b8967.md  c-89211fc2.md  c-bbf901d2.md  c-dac10c4e.md
deploy/: telegram-project-manager-do-worker.service
src/telegram_project_manager/: __init__.py  __main__.py  main.py
src/telegram_project_manager/bots/: __init__.py
src/telegram_project_manager/bots/ask_manager/: __init__.py  commands.py  images.py  prompts.py  schemas.py  service.py
src/telegram_project_manager/bots/code_manager/: __init__.py  codex_sdk.py  commands.py  progress.py  prompts.py  schemas.py  service.py  workspace.py
src/telegram_project_manager/bots/codex_queue/: __init__.py  commands.py
src/telegram_project_manager/bots/commit_manager/: __init__.py  (+7 more)
src/telegram_project_manager/integrations/: __init__.py
src/telegram_project_manager/platform/: __init__.py  config.py  permissions.py  responses.py  router.py  secrets.py  telegram_bot.py
tests/: test_ask_manager.py  test_code_manager.py  test_codex_queue.py  test_commands.py  test_config.py  test_do_manager.py  test_do_workspace.py  test_github_commit_builder.py  test_github_issues.py  test_issue_list.py  test_issue_manager.py  test_llm_client.py  test_llm_memory.py  test_local_repository.py  test_permissions.py  test_planner_schema.py  test_pull_request_manager.py  test_repository_context.py  test_repository_setup.py  test_responses.py  test_telegram_bot.py
(+31 files in other folders)
